# linkml-pydantic-polyfactory

./: README.md  pyproject.toml
tutorials/erdantic/: vis.py
tutorials/linkml/part_1_schemas/: bad-data.yaml  data.json  data.yaml  generate.sh  personinfo.yaml  validate.sh
tutorials/linkml/part_2_containers/: data.yaml  personinfo.yaml  vis.sh
tutorials/linkml/part_3_constraints/: bad-data.yaml  data.yaml  personinfo.yaml
tutorials/linkml/part_5_python/: gen_pydantic.sh  generate.sh  personinfo.py  personinfo.yaml  test.py
tutorials/linkml/part_6_enum/: data.yaml  personinfo-mapped.yaml  personinfo.py  personinfo.yaml
tutorials/linkml/part_7_slots/: personinfo-with-inheritance.schema.json  personinfo-with-inheritance.yaml  personinfo.yaml  slot-usage-example.yaml
tutorials/polyfactory/: basic_dataclass.py  basic_pydantic.py  ts_pydantic.py  ts_row_pydantic.py
tutorials/pydantic/: schema.py
